--- a/7DRL_2021/7DRL_2021.csproj
+++ b/7DRL_2021/7DRL_2021.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Behaviors\BehaviorActionHolder.cs" />
     <Compile Include="Behaviors\BehaviorAlive.cs" />
     <Compile Include="Behaviors\BehaviorBellTower.cs" />
+    <Compile Include="Behaviors\BehaviorChasmSeam.cs" />
     <Compile Include="Behaviors\BehaviorDecay.cs" />
     <Compile Include="Behaviors\BehaviorDrawable.cs" />
     <Compile Include="Behaviors\BehaviorEscapeTarget.cs" />
@@ -230,6 +231,7 @@
     <Compile Include="SpriteLoader.cs" />
     <Compile Include="StringUtil.cs" />
     <Compile Include="Symbol.cs" />
+    <Compile Include="Systems\System.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="VisualEffect.cs" />
