--- a/7DRL_2021/7DRL_2021.csproj
+++ b/7DRL_2021/7DRL_2021.csproj
@@ -145,7 +145,6 @@
     <Compile Include="EventBus.cs" />
     <Compile Include="Events\EventAction.cs" />
     <Compile Include="Events\EventCurio.cs" />
-    <Compile Include="FontUtil.cs" />
     <Compile Include="FrameCounter.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="ICurio.cs" />
@@ -155,6 +154,7 @@
     <Compile Include="InputTwinState.cs" />
     <Compile Include="InputUtil.cs" />
     <Compile Include="IPreDrawable.cs" />
+    <Compile Include="ITooltipProvider.cs" />
     <Compile Include="LerpHelper.cs" />
     <Compile Include="LineSet.cs" />
     <Compile Include="Manager.cs" />
@@ -244,14 +244,23 @@
     <Compile Include="Slider.cs" />
     <Compile Include="SoundLoader.cs" />
     <Compile Include="SpriteLoader.cs" />
+    <Compile Include="StringFormatUtil.cs" />
     <Compile Include="StringUtil.cs" />
     <Compile Include="Symbol.cs" />
     <Compile Include="Systems\System.cs" />
     <Compile Include="Template.cs" />
+    <Compile Include="Text\FontRenderer.cs" />
+    <Compile Include="Text\FontUtil.cs" />
+    <Compile Include="Text\GameElements.cs" />
+    <Compile Include="Text\TableElements.cs" />
+    <Compile Include="Text\TextBuilder.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="VisualEffect.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Curryfy, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Curryfy.3.1.0\lib\net45\Curryfy.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
@@ -902,6 +911,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="content\ui_momentum.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="content\ui_mouse_cursor.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="content\ui_pointer_small.png">
