--- a/7DRL_2021/7DRL_2021.csproj
+++ b/7DRL_2021/7DRL_2021.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Mask.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Menus\Base.cs" />
+    <Compile Include="Menus\BaseNew.cs" />
     <Compile Include="Menus\PlayerUI.cs" />
     <Compile Include="Menus\TitleUI.cs" />
     <Compile Include="Pathfinding\Dijkstra\IUnweightedGraph.cs" />
@@ -238,6 +239,7 @@
     <Compile Include="Scene.cs" />
     <Compile Include="SceneGame.cs" />
     <Compile Include="SceneLoading.cs" />
+    <Compile Include="SceneMascot.cs" />
     <Compile Include="SceneTitle.cs" />
     <Compile Include="Scheduler.cs" />
     <Compile Include="SkillUtil.cs" />
@@ -632,6 +634,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="content\heart.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="content\intro_mascot_dark_strip5.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="content\intro_mascot_strip4.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="content\juggler_body.png">
