--- a/7DRL_2021/7DRL_2021.csproj
+++ b/7DRL_2021/7DRL_2021.csproj
@@ -179,6 +179,7 @@
     <Compile Include="PrimitiveBatch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProtoEffect.cs" />
     <Compile Include="RegistryEntry.cs" />
     <Compile Include="Results\ActionAlignGrid.cs" />
     <Compile Include="Results\ActionBloodThorn.cs" />
