- Adds a Statistics menu for displaying data of previous runs - Adds a statistic for which game over ended the run - Adds a new text element for displaying icons - Adds asynchronous file operations for json files - Force initialize RegistryEntry classes on game start

--- a/7DRL_2021/7DRL_2021.csproj
+++ b/7DRL_2021/7DRL_2021.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Menus\BaseNew.cs" />
     <Compile Include="Menus\OptionsUI.cs" />
     <Compile Include="Menus\PlayerUI.cs" />
+    <Compile Include="Menus\StatUI.cs" />
     <Compile Include="Menus\TitleUI.cs" />
     <Compile Include="JsonFile.cs" />
     <Compile Include="Pathfinding\Dijkstra\IUnweightedGraph.cs" />
@@ -275,6 +276,7 @@
     <Compile Include="Text\TableElements.cs" />
     <Compile Include="Text\TextBuilder.cs" />
     <Compile Include="Util.cs" />
+    <Compile Include="GameOverType.cs" />
     <Compile Include="VisualEffect.cs" />
   </ItemGroup>
   <ItemGroup>
